--- a/frontend/src/components/styles/WeatherCard.css
+++ b/frontend/src/components/styles/WeatherCard.css
@@ -1,3 +1,10 @@
+.weather-contents {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  gap: 0px;
+}
+
 .weatherCard {
   border: 2px solid black;
   border-radius: 30px;
