--- a/frontend/src/components/styles/WeatherCard.css
+++ b/frontend/src/components/styles/WeatherCard.css
@@ -6,12 +6,14 @@
 }
 
 .weatherCard {
-  border: 2px solid black;
+  border: 3px solid #176b87;
   border-radius: 30px;
   margin: 2.5em;
   transition: all 0.3s ease;
+  color: #eeeeee;
 }
 
 .weatherCard:hover {
+  border: 3px solid #64ccc5;
   transform: scale(1.1);
 }
