add persistence to weather cards

--- a/frontend/src/components/styles/WeatherCard.css
+++ b/frontend/src/components/styles/WeatherCard.css
@@ -13,6 +13,11 @@
   color: #eeeeee;
 }
 
+.active-card {
+  border: 3px solid #64ccc5;
+  background: #176b87;
+}
+
 .weatherCard:hover {
   border: 3px solid #64ccc5;
   background: #176b87;
